--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "backend de platzi social en el curso practico de node",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
+    "dev": "nodemon api/index",
     "test": "jest"
   },
   "author": "@johan-avila",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
